UtahLiveDataTest/src/objects/ServiceArea__c.object
<CustomObject>
    <description>[Business] Master list of all the Service Area information is stored in this object , Service areas are also applicable to the Announcements ,Programs,Application via Junction objects</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bureau Unit</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Areas</relationshipLabel>
        <relationshipName>Service_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Administration__c</fullName>
        <formula>Account__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Administration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoreServiceArea1__c</fullName>
        <label>Core Service Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Education/Training</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Economic Development</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Arts/Culture</fullName>
                </value>
                <value>
                    <fullName>Public Works</fullName>
                </value>
                <value>
                    <fullName>Parks and Recreation</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Safety/Security</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CoreServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Core Service Area</label>
        <referenceTo>ServiceArea__c</referenceTo>
        <relationshipName>Service_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a default service Area for any entity</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HideActivateServiceAreabutton__c</fullName>
        <formula>ISPICKVAL( Status__c , &apos;Active&apos;)</formula>
        <label>HideActivateServiceAreabutton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditDelete__c</fullName>
        <formula>NOT(ISPICKVAL(Status__c, &apos;Draft&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsCoreServiceArea__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Core Service Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the Service Area</description>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PageLayoutTitle__c</fullName>
        <formula>IF(IsCoreServiceArea__c, &apos;Core Service Area - &apos; + Name, &apos;Service Area - &apos; + Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Page Layout Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAreaName__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StrategicPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategic Plan</label>
        <referenceTo>StrategicPlan__c</referenceTo>
        <relationshipName>Service_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <formula>IF((TEXT( Status__c ) == &apos;Active&apos;), true, false)</formula>
        <label>is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Project/Service Area</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Administration__c</columns>
        <columns>Account__c</columns>
        <columns>Default__c</columns>
        <columns>CoreServiceArea__c</columns>
        <columns>IsCoreServiceArea__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ServiceAreaName__c</columns>
        <columns>Status__c</columns>
        <columns>StrategicPlan__c</columns>
        <columns>isActive__c</columns>
        <columns>PageLayoutTitle__c</columns>
        <columns>CoreServiceArea1__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PSA-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>GeneralShare__c</fullName>
        <label>General Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>OwnerReplacement__c</fullName>
        <label>Owner Replacement</label>
    </sharingReasons>
</CustomObject>